@@ -1,5 +1,12 @@
 2007-05-11  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl ($manual): Rename to ...
+	($mode): ... this. Fix all users.
+	(read_link_group): Change gl() name from 'manflag' to 'update_mode',
+	and badfmt() string from 'manflag' to 'invalid update mode'.
+
+2007-05-11  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl ($mode): Rename to ...
 	($action): ... this. Fix all users.
 	(checkmanymodes): Rename to ...
